fixes padding on mobile

--- a/less/app.less
+++ b/less/app.less
@@ -232,8 +232,8 @@ section.success {
 
 section#projects {
   .container {
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
   .project-item {
     margin: 0 0 15px;
@@ -279,6 +279,10 @@ section#projects {
 
 @media(min-width:767px) {
   section#projects {
+    .container {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
     .project-item {
       margin: 0 0 30px;
     }
